[magnet] fix z-index and animations

--- a/src/app/components/magnet/magnet.style.css
+++ b/src/app/components/magnet/magnet.style.css
@@ -3,12 +3,14 @@
     height: 100px;
     width: 100px;
     color: white;
+    transition: top 1s, left 1s;
 }
 
 .magnet:not(.ready) {
     display: none;
 }
 
-.magnet:not(.dragging) {
-    transition: top 1s, left 1s;
+.magnet.dragging {
+    transition: none;
+    z-index: 1;
 }
